[package]
name = "hal"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9.6"

[build-dependencies]
bindgen = "0.72.1"
toml = "0.9.6"

[vsf]
path = "../../../vsf"

[vsf.target]
vendor = "Nations"
model = "N32H765IIB7EC"
flags = [
    "--target=thumbv7m-none-eabihf",
    "-I../../../vsf/source/utilities/compiler/arm/3rd-party/CMSIS/CMSIS/Core/Include"
]
