vsf_add_sources(
    vsf_distbus_hal.c
)

add_subdirectory(adc)
add_subdirectory(dac)
add_subdirectory(gpio)
add_subdirectory(i2c)
add_subdirectory(i2s)
add_subdirectory(pwm)
add_subdirectory(sdio)
add_subdirectory(spi)
add_subdirectory(usart)
add_subdirectory(usbd)
add_subdirectory(usbh)
